--- a/project1.ipynb
+++ b/project1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 142,
    "metadata": {},
    "outputs": [
     {
@@ -26,38 +26,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 149,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Import Data and methods\n",
     "from scripts import proj1_helpers as hp\n",
     "y_train, x_train, ids_train = hp.load_csv_data('./data/train.csv', sub_sample=False)\n",
-    "_, x_test, ids_test = hp.load_csv_data('./data/test.csv', sub_sample=False)\n"
+    "_, x_test, ids_test = hp.load_csv_data('./data/test.csv', sub_sample=False)"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 79,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0.019479068382688827\n"
-     ]
-    }
-   ],
    "source": [
-    "\n",
-    "w,l = least_squares_SGD(y_train,x_train,np.zeros(30),20,0.00000007)\n",
-    "print(l)"
+    "Least Squares SGD"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 143,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Parameters of least_squares_SGD.\n",
+    "# Need to be tuned\n",
+    "max_iters = 100\n",
+    "gamma = 0.0000000007\n",
+    "\n",
+    "# Initialization\n",
+    "w_initial = np.zeros(30)\n",
+    "\n",
+    "w,l = least_squares_SGD(y_train,x_train,np.zeros(30),max_iters,gamma)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 144,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -68,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 145,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -83,20 +88,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 147,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.689276\n"
+      "0.638156\n"
      ]
     }
    ],
-   "source": [
-    "print(compute_accuracy(y_train,y_pred))"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
