Data Cleaning in exploratory worksheet

--- a/Exploritary Data Analysis.ipynb
+++ b/Exploritary Data Analysis.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -113,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -133,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -168,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -348,11 +348,100 @@
    "source": [
     "##Probably need to be normalized before and jet values need to be remove?\n",
     "##Fix me\n",
-    "for i in range(30):\n",
-    "    for j in range(i+1,30):\n",
+    "\n",
+    "for i in range(x_train.shape[1]):\n",
+    "    for j in range(i+1,x_train.shape[1]):\n",
     "            if(abs(corrBetweenVariables[i][j]) > 0.90):\n",
     "                print('Correlation between ',features[i],' and ',features[j])\n",
     "        "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Cleaning the data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "indexFeatures0 = []\n",
+    "for i in range(len(nullFeaturesnm0)):\n",
+    "    #There are 99913 cases when num jet is equal to 0\n",
+    "    if(nullFeaturesnm0[i] != 99913):\n",
+    "        #We do not want the num jet feature either\n",
+    "        if(i != 22):\n",
+    "            indexFeatures0.append(i)\n",
+    "    \n",
+    "indexFeatures1 = []\n",
+    "for i in range(len(nullFeaturesnm1)):\n",
+    "    #There are 77544 cases when num jet is equal to 1\n",
+    "    if(nullFeaturesnm1[i] != 77544):\n",
+    "        #We do not want the num jet feature either\n",
+    "        if(i != 22):\n",
+    "            indexFeatures1.append(i)\n",
+    "        \n",
+    "\n",
+    "#Split the data in 3 according to the number of jets (0,1,{2,3}) and \n",
+    "#remove the features that are always -999 in those cases\n",
+    "def splitData(data):\n",
+    "    x_t0 = data[data[:, 22] == 0][:, indexFeatures0]\n",
+    "    x_t1 = data[data[:, 22] == 1][:, indexFeatures1]\n",
+    "    x_t23 = data[(data[:, 22] > 1)]\n",
+    "    return x_t0, x_t1, x_t23\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x_t0, x_t1, x_t23 = splitData(x_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#replace -999 value by the mean of the DER_mass_MMC feature without taking the aberrant values into account\n",
+    "def remove_aberrant(data):\n",
+    "    data[:, 0][data[:, 0] == -999.0] = np.mean(data[:, 0][data[:, 0] != -999.0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "remove_aberrant(x_t0)\n",
+    "remove_aberrant(x_t1)\n",
+    "remove_aberrant(x_t23)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(x_train.shape[0]-x_t0.shape[0]-x_t1.shape[0] == x_t23.shape[0])"
    ]
   },
   {
