Major changes to Pipeline and helperfunction, BUGFIX least sqaure and ridge

--- a/Run models.ipynb
+++ b/Run models.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -69,106 +69,115 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Step 1: Replace the -999 values in the first column by the mean\n",
-    "x_test[:, 0][x_test[:, 0] == -999.0] = np.mean(x_test[:, 0][x_test[:, 0] != -999.0])\n",
-    "x_train[:, 0][x_train[:, 0] == -999.0] = np.mean(x_train[:, 0][x_train[:, 0] != -999.0])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 76,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Step 2: add dimension to y and bring y back to 0 and 1 -> for logistic regression #FIXME bring back\n",
-    "y_train = np.expand_dims(y_train, axis=1)\n",
-    "y_train = np.array([0 if x == -1 else 1 for x in y_train])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 77,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Step 3: Split data set into 3 datasets depending on jet num\n",
-    "y_t0, y_t1, y_t23, x_t0, x_t1, x_t23 = splitData(y_train, x_train)\n",
+    "# STEP 1: Define two methods, one tranforms x, the other y\n",
     "\n",
-    "# Step 3.5: Remove aberrant just to be sure ? FIXME"
+    "def transform_x_least_squares(x):\n",
+    "    # Step 1: Replace the -999 values in the first column by the mean\n",
+    "    x[:, 0][x[:, 0] == -999.0] = np.mean(x[:, 0][x[:, 0] != -999.0])\n",
+    "    \n",
+    "    # Step 2: Split data set into 3 datasets depending on jet num\n",
+    "    x_0, x_1, x_23 = split_x(x)\n",
+    "    \n",
+    "    # Step 3: Remove aberrant just to be sure ? FIXME\n",
+    "    # Step 4: Standardize data\n",
+    "    x_0, x_0_mean, x_0_std = standardize(x_0)\n",
+    "    x_1, x_1_mean, x_1_std = standardize(x_1)\n",
+    "    x_23, x_23_mean, x_23_std = standardize(x_23)\n",
+    "    \n",
+    "    # Step 5: Feature expansion\n",
+    "    # 5.1 add column with constant terms\n",
+    "    tx_0 = np.c_[np.ones((x_0.shape[0], 1)), x_0]\n",
+    "    tx_1 = np.c_[np.ones((x_1.shape[0], 1)), x_1]\n",
+    "    tx_23 = np.c_[np.ones((x_23.shape[0], 1)), x_23]\n",
+    "\n",
+    "    # 5.2 polynomial basis\n",
+    "\n",
+    "    # 5.3 nonlinear expansion\n",
+    "    \n",
+    "    # Final step: return all transformed data\n",
+    "    return tx_0, tx_1, tx_23\n",
+    "\n",
+    "def transform_y_least_squares(y, x):\n",
+    "    # Step 1: add dimension to y \n",
+    "    y = np.expand_dims(y_train, axis=1)\n",
+    "    \n",
+    "    # For logistic regression: bring y back to 0 and 1 -> for logistic regression #FIXME bring back\n",
+    "    # y = np.array([0 if i == -1 else 1 for i in y])\n",
+    "    \n",
+    "    # Step 2: Split data set into 3 datasets depending on jet num\n",
+    "    y_0, y_1, y_23 = split_y(y, x)\n",
+    "\n",
+    "    return y_0, y_1, y_23\n",
+    "    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Step 4: Standardize data\n",
-    "x_t0, x_t1, x_t23 = standardize(x_t0), standardize(x_t1), standardize(x_t23)"
+    "# Perform cross validation"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Step 5: Feature expansion: add polynomial basis for example"
+    "# Learn on entire dataset"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Step 6: Cross validation to test implementation\n",
-    "#k_fold = 10\n",
-    "#print(cross_validation(y_train, tx_train, k_fold, least_squares))"
+    "# STEP 2: Call these functions\n",
+    "y_t0, y_t1, y_t23 = transform_y_least_squares(y_train, x_train)\n",
+    "tx_t0, tx_t1, tx_t23 = transform_x_least_squares(x_train)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
-     "ename": "AttributeError",
-     "evalue": "'tuple' object has no attribute 'T'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-82-d082f4686160>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m# Step 7: Learn on entire dataset\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mw_0\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mleast_squares\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0my_t0\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mx_t0\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m \u001b[0mw_1\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mleast_squares\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0my_t1\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mx_t1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0mw_2\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mleast_squares\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0my_t23\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mx_t23\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0my_prediction_train\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mpredict_labels_datasets\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mw_0\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mw_1\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mw_2\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtx_train\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m~/Documents/higgs-boson/scripts/implementations.py\u001b[0m in \u001b[0;36mleast_squares\u001b[0;34m(y, tx)\u001b[0m\n\u001b[1;32m     80\u001b[0m     \u001b[0;34m\"\"\"calculate the least squares solution.\"\"\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     81\u001b[0m     \u001b[0;31m# Returns mse, and optimal weights\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 82\u001b[0;31m     \u001b[0mweights\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mlinalg\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0minv\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtx\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mT\u001b[0m \u001b[0;34m@\u001b[0m \u001b[0mtx\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m@\u001b[0m \u001b[0mtx\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mT\u001b[0m \u001b[0;34m@\u001b[0m \u001b[0my\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     83\u001b[0m     \u001b[0;32mreturn\u001b[0m \u001b[0mweights\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcompute_loss_mse\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0my\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtx\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mweights\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     84\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mAttributeError\u001b[0m: 'tuple' object has no attribute 'T'"
-     ]
+     "data": {
+      "text/plain": [
+       "0.75976"
+      ]
+     },
+     "execution_count": 50,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Step 7: Learn on entire dataset\n",
-    "w_0 = least_squares(y_t0, x_t0)\n",
-    "w_1 = least_squares(y_t1, x_t1)\n",
-    "w_2 = least_squares(y_t23, x_t23)\n",
-    "y_prediction_train = predict_labels_datasets(w_0, w_1, w_2, tx_train)\n",
+    "# Learn on entire dataset\n",
+    "w_0, loss_w0 = least_squares(y_t0, tx_t0)\n",
+    "w_1, loss_w1 = least_squares(y_t1, tx_t1)\n",
+    "w_2, loss_w2 = least_squares(y_t23, tx_t23)\n",
+    "y_prediction_train = predict_labels_datasets(w_0, w_1, w_2, x_train, transform_x_least_squares)\n",
     "compute_accuracy(y_train, y_prediction_train)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Step 8: Predict values on test set\n",
-    "y_prediction_test = predict_labels_datasets(w_0, w_1, w_2, tx_test)\n",
-    "create_csv_submission(ids, y_prediction_test, \"submission.csv\")\n",
-    "\n",
-    "# FIXME map 0 to -1"
+    "# Predict y_test to submit on kaggle\n",
+    "y_prediction_test = predict_labels_datasets(w_0, w_1, w_2, x_test, transform_x_least_squares)\n",
+    "create_csv_submission(ids_test, y_prediction_test, \"submission.csv\")"
    ]
   },
   {
