--- a/Run models.ipynb
+++ b/Run models.ipynb
@@ -121,32 +121,27 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Perform cross validation"
+    "# STEP 2: Perform cross validation"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Learn on entire dataset"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 49,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# STEP 2: Call these functions\n",
+    "# STEP 3: Learn on entire dataset\n",
     "y_t0, y_t1, y_t23 = transform_y_least_squares(y_train, x_train)\n",
-    "tx_t0, tx_t1, tx_t23 = transform_x_least_squares(x_train)"
+    "tx_t0, tx_t1, tx_t23 = transform_x_least_squares(x_train)\n",
+    "\n",
+    "w_0, loss_w0 = least_squares(y_t0, tx_t0)\n",
+    "w_1, loss_w1 = least_squares(y_t1, tx_t1)\n",
+    "w_2, loss_w2 = least_squares(y_t23, tx_t23)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
@@ -155,23 +150,19 @@
        "0.75976"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 53,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Learn on entire dataset\n",
-    "w_0, loss_w0 = least_squares(y_t0, tx_t0)\n",
-    "w_1, loss_w1 = least_squares(y_t1, tx_t1)\n",
-    "w_2, loss_w2 = least_squares(y_t23, tx_t23)\n",
     "y_prediction_train = predict_labels_datasets(w_0, w_1, w_2, x_train, transform_x_least_squares)\n",
     "compute_accuracy(y_train, y_prediction_train)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -179,20 +170,6 @@
     "y_prediction_test = predict_labels_datasets(w_0, w_1, w_2, x_test, transform_x_least_squares)\n",
     "create_csv_submission(ids_test, y_prediction_test, \"submission.csv\")"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
