--- a/Run logistic regression.ipynb
+++ b/Run logistic regression.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -73,8 +73,18 @@
     "    # Step 2: Split data set into 3 datasets depending on jet num\n",
     "    x_0, x_1, x_23 = split_x(x)\n",
     "    \n",
-    "    # Step 3: Remove aberrant just to be sure ? FIXME\n",
+    "    # Step 3: Remove aberrant just to be sure\n",
+    "    remove_aberrant(x_0)\n",
+    "    remove_aberrant(x_1)\n",
+    "    remove_aberrant(x_23)\n",
     "    \n",
+    "    # 5.2 polynomial basis\n",
+    "    degree = 8\n",
+    "    x_0 = build_poly(x_0, degree)\n",
+    "    x_1 = build_poly(x_1, degree)\n",
+    "    x_23 = build_poly(x_23, degree)\n",
+    "    \n",
+    "\n",
     "    # Step 4: Standardize data\n",
     "    x_0, x_0_mean, x_0_std = standardize(x_0)\n",
     "    x_1, x_1_mean, x_1_std = standardize(x_1)\n",
@@ -86,8 +96,7 @@
     "    tx_1 = np.c_[np.ones((x_1.shape[0], 1)), x_1]\n",
     "    tx_23 = np.c_[np.ones((x_23.shape[0], 1)), x_23]\n",
     "\n",
-    "    # 5.2 polynomial basis\n",
-    "\n",
+    "    \n",
     "    # 5.3 nonlinear expansion\n",
     "    \n",
     "    # Final step: return all transformed data\n",
@@ -95,7 +104,7 @@
     "\n",
     "def transform_y_logistic(y, x):\n",
     "    # Step 1: add dimension to y \n",
-    "    y = np.expand_dims(y_train, axis=1)\n",
+    "    y = np.expand_dims(y, axis=1)\n",
     "    \n",
     "    # For logistic regression: bring y back to 0 and 1 -> for logistic regression #FIXME bring back\n",
     "    y = np.array([0 if i == -1 else 1 for i in y])\n",
@@ -109,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -118,46 +127,104 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Current iteration=0, loss=68712.23192577629\n",
-      "weights size:0.0004649018270131234\n",
-      "Current iteration=10000, loss=42436.89335814543\n",
-      "weights size:3.2775941773543797\n",
-      "Current iteration=20000, loss=43600.545865174274\n",
-      "weights size:3.125411051280684\n",
-      "Current iteration=30000, loss=42891.93868858164\n",
-      "weights size:3.01827307936436\n",
-      "Current iteration=40000, loss=42217.62105360966\n",
-      "weights size:3.304723935297876\n",
-      "loss=42389.056382095085\n",
-      "Current iteration=0, loss=53591.060334834445\n",
-      "weights size:0.0009666461541747606\n",
-      "Current iteration=10000, loss=43189.19345276145\n",
-      "weights size:1.531386980042974\n",
-      "Current iteration=20000, loss=43426.67455649385\n",
-      "weights size:1.5576740275050802\n",
-      "Current iteration=30000, loss=43303.781382348745\n",
-      "weights size:1.6572118008442722\n",
-      "Current iteration=40000, loss=43192.28533185497\n",
-      "weights size:1.5365246041502734\n",
-      "loss=43118.66437245187\n",
-      "Current iteration=0, loss=50192.99171468878\n",
-      "weights size:0.00043053562790325566\n",
-      "Current iteration=10000, loss=39112.04437969311\n",
-      "weights size:1.4869657658294553\n",
-      "Current iteration=20000, loss=39407.051379862896\n",
-      "weights size:1.60723445735579\n",
-      "Current iteration=30000, loss=39834.08438237967\n",
-      "weights size:1.3866703237246103\n",
-      "Current iteration=40000, loss=39391.3888142934\n",
-      "weights size:1.6423029140395218\n",
-      "loss=39204.445725516074\n"
+      "Current iteration=0, loss=69192.96017608918\n",
+      "weights size:0.0001052745053757\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/yann/Documents/higgs-boson/scripts/implementations.py:189: RuntimeWarning: divide by zero encountered in log\n",
+      "  return - np.squeeze((y.T @ np.log(sigmoid(tx @ w)) + (1 - y).T @ np.log(1 - sigmoid(tx @ w))))\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Current iteration=10000, loss=nan\n",
+      "weights size:4.329599370255327\n",
+      "Current iteration=20000, loss=nan\n",
+      "weights size:5.092868872450366\n",
+      "Current iteration=30000, loss=nan\n",
+      "weights size:5.118820057681811\n",
+      "Current iteration=40000, loss=nan\n",
+      "weights size:5.119121136132341\n",
+      "Current iteration=50000, loss=nan\n",
+      "weights size:5.276511474182574\n",
+      "Current iteration=60000, loss=39844.33000044996\n",
+      "weights size:5.230755403782653\n",
+      "Current iteration=70000, loss=nan\n",
+      "weights size:5.61076581606541\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/yann/Documents/higgs-boson/scripts/implementations.py:181: RuntimeWarning: overflow encountered in exp\n",
+      "  return 1.0 / (1 + np.exp(-t))\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Current iteration=80000, loss=nan\n",
+      "weights size:52.34333260327412\n",
+      "Current iteration=90000, loss=nan\n",
+      "weights size:21.27181846609832\n",
+      "loss=nan\n",
+      "Current iteration=0, loss=53002.46760433886\n",
+      "weights size:0.0017572519497114356\n",
+      "Current iteration=10000, loss=nan\n",
+      "weights size:4.8807405851300665\n",
+      "Current iteration=20000, loss=nan\n",
+      "weights size:4.218276794376191\n",
+      "Current iteration=30000, loss=nan\n",
+      "weights size:10.541153761265397\n",
+      "Current iteration=40000, loss=nan\n",
+      "weights size:7.169846170402905\n",
+      "Current iteration=50000, loss=nan\n",
+      "weights size:6.762182068486548\n",
+      "Current iteration=60000, loss=nan\n",
+      "weights size:5.221180890419102\n",
+      "Current iteration=70000, loss=nan\n",
+      "weights size:7.607152216550544\n",
+      "Current iteration=80000, loss=nan\n",
+      "weights size:5.109977206778802\n",
+      "Current iteration=90000, loss=nan\n",
+      "weights size:5.934067352569003\n",
+      "loss=nan\n",
+      "Current iteration=0, loss=49549.739484312835\n",
+      "weights size:0.0006207334895275524\n",
+      "Current iteration=10000, loss=inf\n",
+      "weights size:2.898133262474943\n",
+      "Current iteration=20000, loss=nan\n",
+      "weights size:3.7518306669161015\n",
+      "Current iteration=30000, loss=nan\n",
+      "weights size:6.3581216470974775\n",
+      "Current iteration=40000, loss=nan\n",
+      "weights size:17.933015497055795\n",
+      "Current iteration=50000, loss=nan\n",
+      "weights size:7.846618234174651\n",
+      "Current iteration=60000, loss=36959.61964642807\n",
+      "weights size:5.17296171843704\n",
+      "Current iteration=70000, loss=nan\n",
+      "weights size:4.765618648295665\n",
+      "Current iteration=80000, loss=nan\n",
+      "weights size:5.503325974052863\n",
+      "Current iteration=90000, loss=37022.42267383876\n",
+      "weights size:5.375760606215964\n",
+      "loss=nan\n"
      ]
     }
    ],
@@ -170,33 +237,41 @@
     "initial_w_1 = np.zeros((tx_t1.shape[1], 1))\n",
     "initial_w_23 = np.zeros((tx_t23.shape[1], 1))\n",
     "\n",
-    "lambda_ = 0.02\n",
-    "gamma = 0.01\n",
-    "max_iters = 50000\n",
+    "lambda_ = 0.01\n",
+    "gamma = 0.005\n",
+    "max_iters = 100000\n",
     "\n",
     "# Logistic regression\n",
     "#w_0, loss_w0 = logistic_regression(y_t0, tx_t0, initial_w_0, max_iters, gamma)\n",
     "#w_1, loss_w1 = logistic_regression(y_t1, tx_t1, initial_w_1, max_iters, gamma)\n",
     "#w_2, loss_w2 = logistic_regression(y_t23, tx_t23, initial_w_23, max_iters, gamma)\n",
     "\n",
-    "# Regularized logistic regression\n",
+    "# Regularized logistic regression, stochastic\n",
     "w_0, loss_w0 = reg_logistic_regression_SGD(y_t0, tx_t0, lambda_, initial_w_0, max_iters, gamma)\n",
     "w_1, loss_w1 = reg_logistic_regression_SGD(y_t1, tx_t1, lambda_, initial_w_1, max_iters, gamma)\n",
-    "w_2, loss_w2 = reg_logistic_regression_SGD(y_t23, tx_t23, lambda_, initial_w_23, max_iters, gamma)\n"
+    "w_2, loss_w2 = reg_logistic_regression_SGD(y_t23, tx_t23, lambda_, initial_w_23, max_iters, gamma)\n",
+    "\n",
+    "# Newton logistic regression\n",
+    "#w_0, loss_w0 = logistic_regression_newton(y_t0, tx_t0, lambda_, initial_w_0, max_iters, gamma)\n",
+    "#w_1, loss_w1 = logistic_regression_newton(y_t1, tx_t1, lambda_, initial_w_1, max_iters, gamma)\n",
+    "#w_2, loss_w2 = logistic_regression_newton(y_t23, tx_t23, lambda_, initial_w_23, max_iters, gamma)\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
-   "metadata": {},
+   "execution_count": 10,
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.73854"
+       "0.766736"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -208,13 +283,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Predict y_test to submit on kaggle\n",
     "y_prediction_test = predict_labels_datasets_logistic(w_0, w_1, w_2, x_test, transform_x_logistic)\n",
     "create_csv_submission(ids_test, y_prediction_test, \"submission.csv\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Results:\n",
+    "## Reg_logistic_SGD\n",
+    "gamma = 0.0005 max_iters = 10000000 lambda = 0 degree = 1 accuracy = 0.745748\n",
+    "gamma = 0.0005 max_iters = 10000000 lambda = 0 degree = 2 accuracy = 0.80364 -> Kaggle 0.77300\n",
+    "gamma = 0.0005 max_iters = 10000000 lambda = 0 degree = 3 accuracy = 0.791964 -> Kaggle 0.78508\n",
+    "gamma = 0.0005 max_iters = 10000000 lambda = 0 degree = 4 accuracy = 0.791584\n",
+    "\n",
+    "gamma = 0.0005 max_iters = 10000000 lambda = 0 degree = 8 accuracy = 0.766736\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "0.80364 "
    ]
   }
  ],
